# cv-llm

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
data/: cv.txt
